blueprint for offline database

--- a/src/app/auth/register-hospital/register-hospital.component.html
+++ b/src/app/auth/register-hospital/register-hospital.component.html
@@ -13,6 +13,6 @@
     </ion-item>
   </ion-list>
   <ion-button>Register</ion-button>
-  <ion-button>Already a member?</ion-button>
+  <ion-button routerLink="/auth">Already a member?</ion-button>
   <ion-button>Register as Donor?</ion-button>
   </form>
