--- a/src/app/auth/register-donor/register-donor.component.html
+++ b/src/app/auth/register-donor/register-donor.component.html
@@ -27,6 +27,6 @@
   </ion-item>
 </ion-list>
 <ion-button>Register</ion-button>
-<ion-button>Already a member?</ion-button>
+<ion-button routerLink="/auth">Already a member?</ion-button>
 <ion-button>Register as Hospital</ion-button>
 </form>
