--- a/src/app/home/story-component/story-component.component.html
+++ b/src/app/home/story-component/story-component.component.html
@@ -1,15 +1,15 @@
 <ion-card>
 
-    <ion-card-title>The incredible story of utshab</ion-card-title>
+    <ion-card-title>{{title}}</ion-card-title>
     <ion-item lines="none">
     
-      <ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQmEiWemqrkFG0IpGM-Mvz_RLBO0Ps1rxb5294V1whaFuTW7HUq"></ion-img>
+      <ion-img [src]="imgurl"></ion-img>
   
   </ion-item>
 
 
   <ion-card-content>
-    the story details will be written here, about the incredible blood transfusion that save utshabs life
+    {{details}}
   </ion-card-content>
 </ion-card>
 
