--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,12 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Login/Signup</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-img src="../../assets/logo-small.png" slot="start" style="max-width: 39px; max-height: 40px;" routerLink="/"></ion-img>
+        <ion-title slot="end">Login/Signup</ion-title>
+    </ion-toolbar>
 </ion-header>
 <ion-content>
-
-
-
-  <router-outlet></router-outlet>
-  
+    <router-outlet></router-outlet>
 </ion-content>
