--- a/src/app/hospital/available-donors/available-donors.page.html
+++ b/src/app/hospital/available-donors/available-donors.page.html
@@ -1,30 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-    <ion-menu-button menu="m1"></ion-menu-button>
-  </ion-buttons>
-    <ion-title>{{alertTitle}}</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-img src="../../assets/logo-small.png" slot="start" style="max-width: 39px; max-height: 40px;" routerLink="/"></ion-img>
+        <ion-buttons slot="end">
+            <ion-menu-button menu="m1"></ion-menu-button>
+        </ion-buttons>
+        <ion-title>{{alertTitle}}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let donor of availableDonors">
-      <donor-card
-      [name]="donor.name"
-      [address]="donor.location.address"
-      [donor]="donor"
-      [imageUrl]="donor.location.staticMapImageUrl"
-      [thisAlertId]="myAlertId"
-      ></donor-card>
-    </ion-item>
-  </ion-list>
-  <app-map-modal 
-  *ngIf="showMap"
-   [title]="title" 
-   [mapCentre]="mapCentre"
-   [selectable]="selectable"
-   [closeButtonText]=""
-   [donor]="donor"        
-  ></app-map-modal>
+    <ion-list>
+        <ion-item *ngFor="let donor of availableDonors">
+            <donor-card [name]="donor.name" [address]="donor.location.address" [donor]="donor" [imageUrl]="donor.location.staticMapImageUrl" [thisAlertId]="myAlertId"></donor-card>
+        </ion-item>
+    </ion-list>
+    <app-map-modal *ngIf="showMap" [title]="title" [mapCentre]="mapCentre" [selectable]="selectable" [closeButtonText]="" [donor]="donor"></app-map-modal>
 </ion-content>
