--- a/src/app/profile-settings/profile-settings.page.html
+++ b/src/app/profile-settings/profile-settings.page.html
@@ -1,17 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button menu="m1"></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Profile/Settings</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-img src="../../assets/logo-small.png" slot="start" style="max-width: 39px; max-height: 40px;" routerLink="/"></ion-img>
+        <ion-buttons slot="end">
+            <ion-menu-button menu="m1"></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Profile/Settings</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <app-alert-notification></app-alert-notification>
-<ion-list>
-  <ion-item>Setting 1</ion-item>
-  <ion-item>Setting 2</ion-item>
-  <ion-item>Setting 3</ion-item>
-</ion-list>
+    <app-alert-notification></app-alert-notification>
+    <ion-list>
+        <ion-item>Setting 1</ion-item>
+        <ion-item>Setting 2</ion-item>
+        <ion-item>Setting 3</ion-item>
+    </ion-list>
 </ion-content>
