--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,17 +1,15 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-menu-button menu="m1"></ion-menu-button>
-        </ion-buttons>
-        <ion-title>
+
+        <ion-title slot="end">
             Our Stories
         </ion-title>
-        <ion-item slot="end" *ngIf="isDonor">
-            <ion-label>{{topAction}}</ion-label>
-            <ion-toggle (ionChange)="onToggleAvailability($event)" checked="true"></ion-toggle>
-        </ion-item>
-        <ion-buttons slot="end" *ngIf="this.authService.isLoggedIn===false">
-            <ion-button routerLink="/auth" color="success">{{topAction}}</ion-button>
+        <ion-img src="../../assets/logo-small.png" slot="start" style="max-width: 39px; max-height: 40px;" routerLink="/"></ion-img>
+        <ion-buttons slot="end">
+            <ion-menu-button menu="m1"></ion-menu-button>
+        </ion-buttons>
+        <ion-buttons slot="start" *ngIf="this.authService.isLoggedIn===false">
+            <ion-button routerLink="/auth/register-donor">Become A Donor</ion-button>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
