--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,35 +1,46 @@
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+    font-size: 20px;
+    line-height: 26px;
 }
 
 #container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+    font-size: 16px;
+    line-height: 22px;
+    color: #8c8c8c;
+    margin: 0;
 }
 
 #container a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 ion-content ion-toolbar {
-  --background: translucent;
+    --background: translucent;
 }
 
-#virtualScrollItem{
-  max-height: 900px;
+#virtualScrollItem {
+    max-height: 900px;
+}
+
+.story-component {
+    background-color: red($color: #000000);
+}
+
+.img {
+    padding: 0px;
+    margin: 0px;
+}
+
+.logo-image {
+    max-width: 39px;
+    max-height: 40px;
 }
