--- a/src/app/hospital/create-success-story/create-success-story.page.html
+++ b/src/app/hospital/create-success-story/create-success-story.page.html
@@ -1,40 +1,53 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button menu="m1"></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Create Success Story</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-img src="../../assets/logo-small.png" slot="start" style="max-width: 39px; max-height: 40px;" routerLink="/"></ion-img>
+        <ion-buttons slot="end">
+            <ion-menu-button menu="m1"></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Create Success Story</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<form [formGroup]="createStoryForm">
-   <ion-list>
+    <form [formGroup]="createStoryForm">
+        <ion-list>
 
-    <ion-item>
-       <ion-label position="floating" >Story title</ion-label>
-       <ion-input formControlName="storyTitle"></ion-input>
-     </ion-item>
-     <ion-item *ngIf="!createStoryForm.get('storyTitle').valid && createStoryForm.get('storyTitle').touched"><p><ion-text color="danger">This field is required</ion-text></p></ion-item>
-
-
-      <ion-item>
-        <ion-label position="floating" >Image URL</ion-label>
-        <ion-input formControlName="storyImgUrl"></ion-input>
-    </ion-item>
-    <ion-item *ngIf="!createStoryForm.get('storyImgUrl').valid && createStoryForm.get('storyImgUrl').touched"><p><ion-text color="danger">This field is required insert image url</ion-text></p></ion-item>
+            <ion-item>
+                <ion-label position="floating">Story title</ion-label>
+                <ion-input formControlName="storyTitle"></ion-input>
+            </ion-item>
+            <ion-item *ngIf="!createStoryForm.get('storyTitle').valid && createStoryForm.get('storyTitle').touched">
+                <p>
+                    <ion-text color="danger">This field is required</ion-text>
+                </p>
+            </ion-item>
 
 
-    <ion-item>
-      <ion-label position="floating">Write story here</ion-label>
-      <ion-textarea formControlName="storyDetails"></ion-textarea>
-    </ion-item>
-    <ion-item *ngIf="!createStoryForm.get('storyDetails').valid && createStoryForm.get('storyDetails').touched"><p><ion-text color="danger">This field is required</ion-text></p></ion-item>
+            <ion-item>
+                <ion-label position="floating">Image URL</ion-label>
+                <ion-input formControlName="storyImgUrl"></ion-input>
+            </ion-item>
+            <ion-item *ngIf="!createStoryForm.get('storyImgUrl').valid && createStoryForm.get('storyImgUrl').touched">
+                <p>
+                    <ion-text color="danger">This field is required insert image url</ion-text>
+                </p>
+            </ion-item>
 
 
-    <ion-button type="submit" (click)="onSubmitCreateStoryForm()" [disabled]="!createStoryForm.valid">Create Story!</ion-button>
-   </ion-list>
-  </form>
+            <ion-item>
+                <ion-label position="floating">Write story here</ion-label>
+                <ion-textarea formControlName="storyDetails"></ion-textarea>
+            </ion-item>
+            <ion-item *ngIf="!createStoryForm.get('storyDetails').valid && createStoryForm.get('storyDetails').touched">
+                <p>
+                    <ion-text color="danger">This field is required</ion-text>
+                </p>
+            </ion-item>
+
+
+            <ion-button type="submit" (click)="onSubmitCreateStoryForm()" [disabled]="!createStoryForm.valid">Create Story!</ion-button>
+        </ion-list>
+    </form>
 
 
 </ion-content>
